# ILGPR_Analytics

./: README.md
ILGPR/: AnalyticsAgent.cpp  AnalyticsAgent.hpp  CMakeLists.txt  Datum.cpp  Datum.hpp  DatumReceivedFilter.cpp  DatumReceivedFilter.hpp  ILGPR.cpp  ILGPR.hpp  LGP.cpp  LGP.hpp  main.cpp
ILGPR-build/: CMakeCache.txt  ILGPR  ILGPR.cbp  Makefile  cmake_install.cmake
MATLAB prototype/: Datum.m  ILGPR.m  ILGPR.m~  LGP.m  LGP.m~  LGPR_PLOT.m  LGPR_PREDICT.m  MAIN_SCRIPT.m  MAIN_SCRIPT.m~  MAIN_SCRIPT_MOVIE.m  map_0001.mat  map_0002.mat  plot_ILGPR_centers.m  visualize_ilgpr.m
MATLAB prototype/gpml-v3.5/: gp.m
MATLAB prototype/gpml-v3.5/cov/: covSEard.m  covSEvlen.m
MATLAB prototype/gpml-v3.5/inf/: infExact.m
gaussian_process_TRIAL/: gaussian_process_TRIAL.pro  main.cpp
visualization/: boat_query_points.txt  discretize_panther_hollow.m  filter_area_pts.m  ilgpr_panther_hollow_heatmap_test.html  ilgpr_panther_hollow_uncertainty_heatmap.html  panther_hollow_gps_boundary.txt  panther_hollow_gps_points.txt
visualization/uncertainty_data/: boat_1.txt  boat_10.txt  boat_11.txt  boat_12.txt  boat_13.txt  boat_14.txt  boat_15.txt  boat_16.txt  boat_17.txt  boat_18.txt  boat_19.txt  boat_2.txt  boat_20.txt  boat_21.txt  boat_22.txt  boat_23.txt  boat_24.txt  boat_25.txt  boat_26.txt  boat_27.txt  boat_28.txt  boat_29.txt  boat_3.txt  boat_30.txt  boat_31.txt  boat_32.txt  boat_33.txt  boat_34.txt  boat_35.txt  boat_36.txt  boat_37.txt  boat_38.txt  boat_39.txt  boat_4.txt  boat_40.txt  boat_41.txt  boat_42.txt  boat_43.txt  boat_44.txt  boat_45.txt  (+115 more)
(+4 files in other folders)
